Removal of old images and addition of new static images

--- a/index.html
+++ b/index.html
@@ -52,15 +52,30 @@
 					<section class="special">
                         <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10357648-taplow-parish-council-by-elections"></iframe></div>
                         <div class="content">
+                        	<h3>#16 Election special - Taplow Parish Council By-election Result.</h3>
+                            <p>According to South Bucks District Council there has not been a By-election in Taplow ward since at least 2002. 
+                            Source: South Bucks District Council. 08/01/16</p>
+                        </div>
+                    </section>
+
+					<section class="special">
+                        <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10357648-taplow-parish-council-by-elections"></iframe></div>
+                        <div class="content">
                         	<h3>#15 Election special - Taplow Parish Council By-elections since 2002.</h3>
-                            <p>According to South Bucks District Council there has not been a By-election in Taplow ward since at least 2002. Source: South Bucks District Council. 08/01/16</p>
+                            <p>According to South Bucks District Council there has not been a By-election in Taplow ward since at least 2002. 
+                            Source: South Bucks District Council. 08/01/16</p>
                         </div>
                     </section>
 					<section class="special">
                         <div class="image"><a href="http://voyant-tools.org/tool/Cirrus/?corpus=1451515228802.803&query=&stopList=1451516086613tg"><img src="images/Taplow-text-analysis.jpg" width=300px height=300px alt="" /></a></div>
                         <div class="content">
                         	<h3>#14 Election special - Taplow Parish Council website text analysis.</h3>
-                            <p>By running the Taplow Parish Council website through a text analyser and filtering out common words like 'the', 'of', etc, you can get a good sense of how an establishment or entity chooses to communicate with its intended audience. The top 5 words used on the website are  Taplow (114), road (107), granted (94), parish (84) and council (67). To summarise, it talks mainly about itself and the local roads. Click on the image for more detailed analysis. Source: voyant-tools.org & Taplow Parish Council website. 30/12/15</p>
+                            <p>By running the Taplow Parish Council website through a text analyser and filtering out common words like 'the', 'of', etc, 
+                            you can get a good sense of how an establishment or entity chooses to communicate with its intended audience. 
+                            The top 5 words used on the website are  Taplow (114), road (107), granted (94), parish (84) and council (67). 
+                            To summarise, it talks mainly about itself and the local roads. No bad thing really. 
+                            Click on the image for more detailed analysis. 
+                            Source: voyant-tools.org & Taplow Parish Council website. 30/12/15</p>
                         </div>
                     </section>
 					<section class="special">
@@ -85,73 +100,108 @@
                         </div>
                     </section>
 					<section class="special">
-                        <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10293465-taplow-yoy-house-price-changes"></iframe></div>
+                        <div class="image"><img src="images/10.png" height=300px width=300px alt="" /></div>
                         <div class="content">
                         	<h3>#10 House price changes flatten.</h3>
-                            <p>This year the compound effect of a lower number of housing sales with a negligible increase in average house prices ended a good run for Taplow Parish since the 2008 financial crisis. Taplow has done well in the 20 years since records started. The advent of Crossrail might give the area the boost it needs for continued house price inflation, even if interest is waning locally. Source: UK Land registry 2015. 30/12/15</p>
+                            <p>This year the compound effect of a lower number of housing sales with a negligible increase in average 
+                            house prices ended a good run for Taplow Parish since the 2008 financial crisis. Taplow has done well in 
+                            the 20 years since records started. The advent of Crossrail might give the area the boost it needs for 
+                            continued house price inflation, even if interest is waning locally. Source: UK Land registry 2015. 30/12/15</p>
                         </div>
                     </section>
 					<section class="special">
-                        <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10293331-taplow-annual-housing-transactions"></iframe></div>
+                        <div class="image"><img src="images/9.png" height=300px width=300px alt="" /></div>
                         <div class="content">
                         	<h3>#9 Taplow property transactions dropped in 2015 as well.</h3>
-                            <p>Historically you can see that the number of property transactions varies between 60 (2011) and 136 (2014). As there are 791 households on the UK Electoral register for Taplow, it implies that between 7.6% and 17.2% of Taplow Parish households churn every year. This has been skewed by the increase in housing stock from Cliveden Gages implying there is churn when in fact it is just new supply. However it looks like figures have settled down once again. It would not be a suprise to see high numbers appear again with the increase in housing stock coming from the Berkeley Homes development which has just started. What will be interesting to see is whether over-supply of housing is likely to flatten house price growth now. Source: UK Land registry 2015. 30/12/15</p>
+                            <p>Historically you can see that the number of property transactions varies between 60 (2011) and 136 (2014). 
+                            As there are 791 households on the UK Electoral register for Taplow, it implies that between 7.6% and 17.2% 
+                            of Taplow Parish households churn every year. This has been skewed by the increase in housing stock from 
+                            Cliveden Gages implying there is churn when in fact it is just new supply. However it looks like figures 
+                            have settled down once again. It would not be a suprise to see high numbers appear again with the increase 
+                            in housing stock coming from the Berkeley Homes development which has just started. What will be interesting 
+                            to see is whether over-supply of housing is likely to flatten house price growth now. 
+                            Source: UK Land registry 2015. 30/12/15</p>
                         </div>
                     </section>
 					<section class="special">
-                        <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10292961-taplow-average-house-price"></iframe></div>
+                        <div class="image"><img src="images/8.png" height=300px width=300px alt="" /></div>
                         <div class="content">
                         	<h3>#8 Taplow average house price stalled in 2015 too.</h3>
-                            <p>As the mix of rural, traditional and commuter belt appeal continued to cast a spell over the British public, Taplow average house prices grew on average at 9.5% year on year. With the arrival of Crossrail in 2018 this is likely to continue as Taplow essentially becomes a viable suburb of Greater London. Source: UK Land registry 2015. 30/12/15</p>
+                            <p>As the mix of rural, traditional and commuter belt appeal continued to cast a spell over the British public, 
+                            Taplow average house prices grew on average at 9.5% year on year. With the arrival of Crossrail in 2018 this is 
+                            likely to continue as Taplow essentially becomes a viable suburb of Greater London. 
+                            Source: UK Land registry 2015. 30/12/15</p>
                         </div>
                     </section>
 					<section class="special">
-                        <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10293088-taplow-total-house-price"></iframe></div>
+                        <div class="image"><img src="images/7.png" height=300px width=300px alt="" /></div>
                         <div class="content">
                         	<h3>#7 Taplow on the rise until 2015.</h3>
-                            <p>Since the UK Land Registry started to record house price sales, people have paid over £540m in total to live in this parish, exchanging property 2014 times. This peaked at £66m through 136 sales in 2014 and has now dropped in 2015 due to a considerable reduction in the number of sales. Source: UK Land registry 2015. 30/12/15</p>
+                            <p>Since the UK Land Registry started to record house price sales, people have paid over £540m in total to 
+                            live in this parish, exchanging property 2014 times. This peaked at £66m through 136 sales in 2014 and has
+                            now dropped in 2015 due to a considerable reduction in the number of sales. Source: UK Land registry 2015. 30/12/15</p>
                         </div>
                     </section>
 					<section class="special">
-                        <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10286664-taplow-home-ownership"></iframe></div>
+                        <div class="image"><img src="images/6.png" height=300px width=300px alt="" /></div>
                         <div class="content">
                         	<h3>#6 High outright home ownership.</h3>
-                            <p>It is not surprising that with higher levels of education, employment and retirement, Taplow Parish owns more of its own property. What is striking is the significant uplift in outright ownership. This could be associated with high net worth individuals residing in the parish, but is more likely to be associated with high number of people over 45 who are likely to have paid their mortgages off. Source: ONS 2011 Census data. 29/12/15</p>
+                            <p>It is not surprising that with higher levels of education, employment and retirement, Taplow Parish owns more of its 
+                            own property. What is striking is the significant uplift in outright ownership. This could be associated with high 
+                            net worth individuals residing in the parish, but is more likely to be associated with high number of people over 45 
+                            who are likely to have paid their mortgages off. Source: ONS 2011 Census data. 29/12/15</p>
                         </div>
                     </section>
                     <section class="special">
-                        <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10261082-taplow-educational-level"></iframe></div>
+                        <div class="image"><img src="images/5.png" height=300px width=300px alt="" /></div>
                         <div class="content">
                         	<h3>#5 Clever people.</h3>
-                            <p>Supporting the premise that the residents of Taplow Parish are higher earners (for those that are working anyway), you would expect to see a higher proportion of residents with degrees and professional qualifications. This bears to be true by quite a jump with Taplow being 13% larger than the national figures for those with degrees. Source: ONS 2011 Census data. 29/12/15</p>
+                            <p>Supporting the premise that the residents of Taplow Parish are higher earners (for those that are working anyway), 
+                            you would expect to see a higher proportion of residents with degrees and professional qualifications. This bears to be 
+                            true by quite a jump with Taplow being 13% larger than the national figures for those with degrees. 
+                            Source: ONS 2011 Census data. 29/12/15</p>
                         </div>
                     </section>
                     <section class="special">
-                        <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10260869-taplow-economic-activity"></iframe></div>
+                        <div class="image"><img src="images/4.png" height=300px width=300px alt="" /></div>
                         <div class="content">
                             <h3>#4 More working, more retired.</h3>
-                            <p>Taplow definitely works harder than the national average (+5%) and the increased number of people in the parish who are retired is 3% greater than the national figures. This indicates that the amount of money in the area is higher than the norm. However, this would only be true if those in employment and those that have retired are, or have been, higher earners. This increased income may be offset by having to service the debt associated with higher property costs, especially for those that are still working and paying down mortgages. Source: ONS 2011 Census data. 29/12/15</p>
+                            <p>Taplow definitely works harder than the national average (+5%) and the increased number of people in the parish 
+                            who are retired is 3% greater than the national figures. This indicates that the amount of money in the area is 
+                            higher than the norm. However, this would only be true if those in employment and those that have retired are, 
+                            or have been, higher earners. This increased income may be offset by having to service the debt associated with 
+                            higher property costs, especially for those that are still working and paying down mortgages. 
+                            Source: ONS 2011 Census data. 29/12/15</p>
                         </div>
                     </section>
            			<section class="special">
 						<div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10283764-taplow-age-profile"></iframe></div>
 						<div class="content">
 							<h3>#3 Under 45s in the minority.</h3>
-							<p>Further evidence of the aging population of the parish. The heavy cluster of the dots in the left hand corner of this scatter chart represent a large disparity in those under the age of 45 in Taplow, by comparison to national figures collected in the census. Source: ONS 2011 Census data. 29/12/15</p>
+							<p>Further evidence of the aging population of the parish. The heavy cluster of the dots in the left hand corner of 
+							this scatter chart represent a large disparity in those under the age of 45 in Taplow, by comparison to national 
+							figures collected in the census. Source: ONS 2011 Census data. 29/12/15</p>
 						</div>
 					</section>
 					<section class="special">
-						<div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10259936-taplow-age-distribution-2"></iframe></div>
+						<div class="image"><img src="images/2.png" height=300px width=300px alt="" /></div>
 						<div class="content">
 							<h3>#2 Less children, more adults.</h3>
-							<p>By breaking down the under 45s into adults and children it can be seen that both populations are approximately 6% below the national average. However it seems fair to say that if there were 6% more adults with families, there would likely be 6% more children in the parish too, the proportions being broadly equal. This would indicate that the problem with families moving into the area is associated with affordable and available housing stock. Source: ONS 2011 Census data. 29/12/15</p>
+							<p>By breaking down the under 45s into adults and children it can be seen that both populations are approximately 
+							6% below the national average. However it seems fair to say that if there were 6% more adults with families, 
+							there would likely be 6% more children in the parish too, the proportions being broadly equal. This would indicate 
+							that the problem with families moving into the area is associated with affordable and available housing stock. 
+							Source: ONS 2011 Census data. 29/12/15</p>
 						</div>
 					</section>
 					<section class="special">
-						<div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10251594-taplow-age-distribution"></iframe></div>
+						<div class="image"><img src="images/1.png" height=300px width=300px alt="" /></div>
 						<div class="content">
 							<h3>#1 Skewed and aging population.</h3>
-							<p>Taplow goes against the national norms in a trend indicating that the majority of residents in the parish are middle aged and elderly. Those under the age of 45, including their young families, are 12% under-represented by comparison to UK national figures. Conversely, those over 45 are 12% over-represented. This is not a 'young' parish by any measure. Source: ONS 2011 Census data. 29/12/15</p>
+							<p>Taplow goes against the national norms in a trend indicating that the majority of residents in the parish are 
+							middle aged and elderly. Those under the age of 45, including their young families, are 12% under-represented by 
+							comparison to UK national figures. Conversely, those over 45 are 12% over-represented. This is not a 'young' 
+							parish by any measure. Source: ONS 2011 Census data. 29/12/15</p>
 						</div>
 					</section>
 				</div>
