--- a/index.html
+++ b/index.html
@@ -50,26 +50,19 @@
 			<section id="two" class="wrapper">
 				<div class="inner alt">
 					<section class="special">
-                        <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10357648-taplow-parish-council-by-elections"></iframe></div>
+                        <div class="image"><img src="images/14.png" width=300px height=300px alt="" /></div>
                         <div class="content">
-                        	<h3>#16 Election special - Taplow Parish Council By-election Result.</h3>
-                            <p>According to South Bucks District Council there has not been a By-election in Taplow ward since at least 2002. 
-                            Source: South Bucks District Council. 08/01/16</p>
-                        </div>
-                    </section>
-
-					<section class="special">
-                        <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10357648-taplow-parish-council-by-elections"></iframe></div>
-                        <div class="content">
-                        	<h3>#15 Election special - Taplow Parish Council By-elections since 2002.</h3>
-                            <p>According to South Bucks District Council there has not been a By-election in Taplow ward since at least 2002. 
+                        	<h3>#14 Election special - Taplow Parish Council By-election Result.</h3>
+                            <p>According to South Bucks District Council there has not been a By-election in Taplow ward since at least 2002.
+                            The result of the by-election held on 21st January 2016 put a solid win in the hands of Yannick Le Touze with 204
+                            votes to Rob Thompson's 118 votes.
                             Source: South Bucks District Council. 08/01/16</p>
                         </div>
                     </section>
 					<section class="special">
                         <div class="image"><a href="http://voyant-tools.org/tool/Cirrus/?corpus=1451515228802.803&query=&stopList=1451516086613tg"><img src="images/Taplow-text-analysis.jpg" width=300px height=300px alt="" /></a></div>
                         <div class="content">
-                        	<h3>#14 Election special - Taplow Parish Council website text analysis.</h3>
+                        	<h3>#13 Election special - Taplow Parish Council website text analysis.</h3>
                             <p>By running the Taplow Parish Council website through a text analyser and filtering out common words like 'the', 'of', etc, 
                             you can get a good sense of how an establishment or entity chooses to communicate with its intended audience. 
                             The top 5 words used on the website are  Taplow (114), road (107), granted (94), parish (84) and council (67). 
@@ -79,24 +72,24 @@
                         </div>
                     </section>
 					<section class="special">
-                        <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10416183-taplow-parish-council-vs-parish-age"></iframe></div>
-                        <div class="content">
-                        	<h3>#13 Election special - Taplow Parish Council vs Taplow Parish demography.</h3>
-                            <p>Whilst the under 45s and their young families are in a minority in Taplow Parish, it is still a substantial group (46%). How does Taplow Parish Council manage to do so little for this younger demography? The council has little to no representation of this age group, which may be something to consider. Source: ONS 2011 Census data. 29/12/15</p>
-                        </div>
-                    </section>
-					<section class="special">
-						<div class="image"><a href="http://www.mapsdata.co.uk/mapsdataapp/index.php/site/htmlembed/4b7251aff777a9611fe8e6cbc2cdb59b?marker=mapsdata_m4&zoom=14&center=51.531900,-0.692757&md5=4b7251aff777a9611fe8e6cbc2cdb59b&viewcolumn=&display=clustermap&viewopacity=0.8&viewradius=25&"><img src="images/Taplow-voter-heatmap.jpg" width=300px height=300px alt="" /></a></div>
+						<div class="image"><img src="images/Taplow-voter-heatmap.jpg" width=300px height=300px alt="" /></a></div>
 						<div class="content">
 							<h3>#12 Election special - Elector concentration.</h3>
-							<p>In an election, you will find that the most concentrated areas of registered electors are in and around the Village Green, down towards the river around Ellington Road and finally the cluster of houses and apartments around Cliveden Gages. These three areas account for about two thirds of the voting age adults in the parish. Source: UK Electoral Register 2015. 29/12/15</p>
+							<p>In an election, you will find that the most concentrated areas of registered electors are in and around 
+							the Village Green, down towards the river around Ellington Road and finally the cluster of houses and 
+							apartments around Cliveden Gages. These three areas account for about two thirds of the voting age adults 
+							in the parish. Source: UK Electoral Register 2015. 29/12/15</p>
 						</div>
 					</section>
 					<section class="special">
-                        <div class="image"><iframe width="300" height="300" frameborder="0" scrolling="no" style="overflow-y:hidden;" src="https://magic.piktochart.com/embed/10293752-taplow-average-house-price-comparisson"></iframe></div>
+                        <div class="image"><img src="images/11.png" height=300px width=300px alt="" /></div>
                         <div class="content">
                         	<h3>#11 House prices continue to increase, flats/apartments drop in value.</h3>
-                            <p>By breaking down the average prices by property type:- detached, semis and terraced houses continue to rise in price demonstrating demand for family homes. Ironically many of these family homes are in Cliveden Gages where the policy of over 55s prohibits a younger age group from moving into the parish. Conversely, flats and apartments have taken a significant drop in average price in 2015. Source: UK Land registry 2015. 30/12/15</p>
+                            <p>By breaking down the average prices by property type:- detached, semis and terraced houses continue 
+                            to rise in price demonstrating demand for family homes. Ironically many of these family homes are in 
+                            Cliveden Gages where the policy of over 55s prohibits a younger age group from moving into the parish. 
+                            Conversely, flats and apartments have taken a significant drop in average price in 2015. 
+                            Source: UK Land registry 2015. 30/12/15</p>
                         </div>
                     </section>
 					<section class="special">
