Minor mod to index.htnl

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <div class="image"><img src="images/14.png" width=300px height=300px alt="" /></div>
                         <div class="content">
                         	<h3>#14 Election special - Taplow Parish Council By-election Result.</h3>
-                            <p>According to South Bucks District Council there has not been a By-election in Taplow ward since at least 2002.
+                            <p>According to South Bucks District Council there has not been a by-election in Taplow ward since at least 2002.
                             The result of the by-election held on 21st January 2016 put a solid win in the hands of Yannick Le Touze with 204
                             votes to Rob Thompson's 118 votes.
                             Source: South Bucks District Council. 08/01/16</p>
